--- a/multi-stage-agent/Jenkinsfile
+++ b/multi-stage-agent/Jenkinsfile
@@ -3,7 +3,7 @@ pipeline {
   stages {
     stage ('Back-end') {
       agent {
-        docker { image 'maven:3.9.6 adopt-openjdk-21'}
+        docker { image 'maven:3.9.6-adoptopenjdk-21' }
       }
       steps {
         sh 'mvn --version'
@@ -11,7 +11,7 @@ pipeline {
     }
     stage ('Front-end') {
       agent {
-        docker { image 'node: 16-alpine'}
+        docker { image 'node: 16-alpine' }
       }
       steps {
         sh 'node --version'
